--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,11 @@ otp_release:
 env:
   global:
     - MIX_ENV=test
-    - PULL_REQUEST_ID=$TRAVIS_PULL_REQUEST
 before_script:
   - rvm install ruby-2.3.1
   - gem install pronto-credo
 script:
-  - if [ $PULL_REQUEST_ID != false ]; then pronto run -f github_pr; fi
+  - pronto run -f github_pr
   - mix test --exclude skip
 addons:
   postgresql: 9.4
