--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,8 @@ elixir:
   - 1.3.3
 otp_release:
   - 18.2.1
-env:
-  global:
-    - MIX_ENV=test
-before_script:
-  - rvm install ruby-2.3.1
-  - gem install pronto-credo
 script:
-  - pronto run -f github_pr
+  - mix credo --strict
   - mix test --exclude skip
 addons:
   postgresql: 9.4
-cache:
- directories:
-   — /home/travis/.rvm/
